--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".activities.MainActivity">
 
+    <include
+        layout= "@layout/app_bar"
+        android:id="@+id/app_bar">
+
+    </include>
+
     <TextView
         android:id="@+id/token_view"
         android:layout_width="wrap_content"
