--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#042a2b</color>
+    <color name="colorPrimaryDark">#444054</color>
+    <color name="colorAccent">#f15025</color>
+    <color name="colorPrimaryLight">#E7ECEF</color>
 </resources>
+
+    <!--F15025-->
