+ localization working (todo - write values-pl strings) + really need to start working on core functionalities...

--- a/app/src/main/res/layout/dialog_change_password.xml
+++ b/app/src/main/res/layout/dialog_change_password.xml
@@ -14,7 +14,8 @@
         android:layout_marginRight="16dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="sans-serif"
-        android:hint="Old" />
+        android:hint="@string/setting_old_password_hint"
+        android:backgroundTint="@color/colorAccent"/>
     <EditText
         android:id="@+id/password_new"
         android:inputType="textPassword"
@@ -25,7 +26,8 @@
         android:layout_marginRight="16dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="sans-serif"
-        android:hint="New"/>
+        android:hint="@string/setting_new_password_hint"
+        android:backgroundTint="@color/colorAccent"/>
     <EditText
         android:id="@+id/password_new2"
         android:inputType="textPassword"
@@ -36,5 +38,6 @@
         android:layout_marginRight="16dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="sans-serif"
-        android:hint="New2"/>
+        android:hint="@string/setting_new2_password_hint"
+        android:backgroundTint="@color/colorAccent"/>
 </LinearLayout>
