--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -31,6 +31,7 @@
         android:ems="10"
         android:hint="@string/register_password_hint"
         android:inputType="textPassword"
+        android:fontFamily="sans-serif"
         android:backgroundTint="@color/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -46,6 +47,7 @@
         android:ems="10"
         android:hint="@string/register_repassword_hint"
         android:inputType="textPassword"
+        android:fontFamily="sans-serif"
         android:backgroundTint="@color/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -76,6 +78,7 @@
         android:text="@string/register_title"
         android:textColor="@color/colorPrimary"
         android:textSize="24sp"
+        android:fontFamily="sans-serif"
         app:layout_constraintBottom_toTopOf="@+id/input_login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
