--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,11 +32,12 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:onClick="showMapClick"
         android:text="@string/show_on_map_button"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/to_visit_menu_button"
-        android:onClick="showMapClick"/>
+        app:layout_constraintTop_toBottomOf="@+id/visited_menu_button" />
 
     <Button
         android:id="@+id/add_new_place_menu_button"
@@ -50,5 +51,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/show_on_map_menu_button"
         android:onClick="addNewPlaceClick"/>
+
+    <Button
+        android:id="@+id/visited_menu_button"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/visited_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/to_visit_menu_button"
+        android:onClick="onVisitedClick"/>
 
 </android.support.constraint.ConstraintLayout>
