--- a/app/src/main/res/layout/activity_to_visit_maps.xml
+++ b/app/src/main/res/layout/activity_to_visit_maps.xml
@@ -9,14 +9,63 @@
     tools:context=".activities.ToVisitMapsActivity">
 
     <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="230dp"
+        android:layout_gravity="bottom|end"
+        android:layout_marginEnd="16dp"
+        android:visibility="visible"
+        app:elevation="6dp"
+        android:backgroundTint="@color/colorAccent"
+        android:tint="@color/colorPrimaryLight"
+        app:pressedTranslationZ="12dp"
+        android:src="@drawable/ic_car"
+        android:onClick="onDriveClick" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="160dp"
+        android:layout_gravity="bottom|end"
+        android:layout_marginEnd="16dp"
+        android:visibility="visible"
+        android:backgroundTint="@color/colorAccent"
+        android:tint="@color/colorPrimaryLight"
+        app:elevation="6dp"
+        app:pressedTranslationZ="12dp"
+        android:src="@drawable/ic_bike"
+        android:onClick="onBikeClick" />
+
+
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="90dp"
+        android:layout_gravity="bottom|end"
+        android:layout_marginEnd="16dp"
+        android:visibility="visible"
+        app:elevation="6dp"
+        android:backgroundTint="@color/colorAccent"
+        android:tint="@color/colorPrimaryLight"
+        app:pressedTranslationZ="12dp"
+        android:src="@drawable/ic_walk"
+        android:onClick="onWalkClick"/>
+
+
+    <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
         android:src="@drawable/ic_baseline_navigation_24px"
         android:layout_margin="16dp"
-        android:onClick="onNavigateClick"
         android:backgroundTint="@color/colorAccent"
-        app:fabSize="normal"/>
+        android:tint="@color/colorPrimaryLight"
+        app:fabSize="normal"
+        app:borderWidth="0dp"/>
 
 </fragment>
