--- a/app/src/main/res/layout/activity_visited.xml
+++ b/app/src/main/res/layout/activity_visited.xml
@@ -6,6 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".activities.VisitedActivity">
 
+    <include
+        android:id="@+id/app_bar"
+        layout="@layout/app_bar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+    </include>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/visited_recycler_view"
         android:layout_width="match_parent"
@@ -13,7 +21,7 @@
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="60dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
