--- a/app/src/main/res/layout/activity_add_new_place.xml
+++ b/app/src/main/res/layout/activity_add_new_place.xml
@@ -47,14 +47,14 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
         android:hint="@string/add_new_place_description_hint"
         android:inputType="textMultiLine"
         android:maxLines="4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageView3"
-        app:layout_constraintTop_toBottomOf="@+id/new_place_address" />
+        app:layout_constraintTop_toBottomOf="@+id/new_place_city" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -78,7 +78,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/new_place_address"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/new_place_address"
-        app:srcCompat="@drawable/ic_map_marker" />
+        app:srcCompat="@drawable/ic_road" />
 
     <ImageView
         android:id="@+id/imageView3"
@@ -97,7 +97,7 @@
         android:layout_width="151dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
         android:inputType="numberDecimal"
         app:layout_constraintStart_toEndOf="@+id/imageView5"
@@ -108,7 +108,7 @@
         android:layout_width="151dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
         android:inputType="numberDecimal"
         app:layout_constraintEnd_toEndOf="parent"
@@ -154,5 +154,31 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/new_place_latitude"
         android:onClick="onAddClick"/>
+
+    <EditText
+        android:id="@+id/new_place_city"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:ems="10"
+        android:hint="@string/add_new_place_city_hint"
+        android:inputType="textPersonName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView6"
+        app:layout_constraintTop_toBottomOf="@+id/new_place_address" />
+
+    <ImageView
+        android:id="@+id/imageView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/new_place_city"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/new_place_city"
+        app:srcCompat="@drawable/ic_city" />
 
 </android.support.constraint.ConstraintLayout>
