--- a/app/src/main/res/layout/place_visited_item.xml
+++ b/app/src/main/res/layout/place_visited_item.xml
@@ -21,7 +21,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:padding="10dp">
+        android:padding="10dp"
+        android:background="?android:selectableItemBackground">
 
         <TextView
             android:id="@+id/place_item_visited_name"
